# note

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
algo/: CMakeLists.txt  LinkList.hpp  Tree.hpp  algo.hpp  main.cpp
android/: CMakeLists.txt  note.cpp  note.hpp
boost/: CMakeLists.txt  asio.cpp  json.cpp  program_options.cpp
c/: CMakeLists.txt  arg.c  hello.c  restrict.c  threads.c
cmake/: android.toolchain.cmake  utils.cmake
cpp/: CMakeLists.txt  any.cpp  chrono.cpp  concept.cpp  condition_variable.cpp  container.cpp  coroutine.cpp  filesystem.cpp  format.cpp  functional.cpp  future_async.cpp  future_promise.cpp  iostream.cpp  mutex.cpp  new_delete.cpp  operator.cpp  ranges.cpp  semaphore.cpp  smart_pointer.cpp  string.cpp  template.cpp  thread.cpp
cpp/module/: CMakeLists.txt  Test-First.ixx  Test.cxx  Test.ixx  main.cpp
cuda/: CMakeLists.txt  demo.cu
darwin/: CMakeLists.txt  kqueue.c
libuv/: CMakeLists.txt
linux/: CMakeLists.txt  epoll.c  inotify.c  libaio.c  liburing.c  minichat.c
linux/kernel/: Makefile  test.c
linux/others/: runso.c
opencv/: CMakeLists.txt  CalibrateCamera.cpp  CharCamera.cpp  CrossLineDetect.cpp  EdgeDetertion.cpp  HoughLines.cpp  Inpainting.cpp  LineDetect.cpp  MoveDetect.cpp  filter.cpp  test.cpp
openmp/: CMakeLists.txt  test.cpp
pybind11/: CMakeLists.txt  test.cpp  test.py
python/: CMakeLists.txt  c_call_py.c  embed.c  obj.py
python/mypy/: mypy.c
qt/: CMakeLists.txt  sync_file.cpp  tcp_server.cpp  test.cpp
rust/src/: lib.rs
rust/src/learn/: mod.rs
unix/: CMakeLists.txt  aio.c  dlfcn.c  poll.c  pthread.c  pthread_cond.c  pthread_mutex.c  select.c  test.c
win/: CMakeLists.txt  iocp.cpp
